...
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="11dp">

                <ImageView
                    android:id="@+id/icon_voltar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="13dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/seta_voltar"
                    android:contentDescription="@string/voltar"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cadastro_hint_nome"
                android:labelFor="@id/edit_nome"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_nome"
                android:layout_width="match_parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cadastro_hint_nascimento"
                android:labelFor="@id/edit_nascimento"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_nascimento"
                android:layout_width="match_parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cadastro_hint_cpf"
                android:labelFor="@id/edit_cpf"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_cpf"
                android:layout_width="match_parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_hint_email"
                android:labelFor="@id/edit_email"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_hint_telefone"
                android:labelFor="@id/edit_telefone"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
...
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="25dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_masculino"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="16dp"/>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/edit_senha"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/stroke_black"
                    android:paddingStart="10dp"
                    android:paddingEnd="40dp"
                    android:inputType="textPassword"
...
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_hint_confirma_senha"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/stroke_black"
                android:paddingHorizontal="10dp"
...
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#424242"/>

            <!-- BOTÃO CADASTRAR -->
            <LinearLayout
                android:id="@+id/containerButtonConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_confirm_selector"
                android:clickable="true"
...
