...
    <string name="cadastro_hint_telefone">Telefone</string>
    <string name="cadastro_hint_senha">Senha</string>
    <string name="cadastro_hint_confirma_senha">Confirmar Senha</string>
    <string name="cadastro_btn_confirmar">CADASTRAR</string>
    <string name="cadastro_erro_campos_vazios">Por favor, preencha todos os campos</string>
    <string name="cadastro_erro_genero">Por favor, selecione um gênero</string>
    <string name="cadastro_erro_senhas_diferentes">As senhas não coincidem</string>
    <string name="cadastro_erro_senhas_iguais_msg">As senhas devem ser iguais</string>
    <string name="cadastro_erro_data_formato">Formato de data inválido. Use DD/MM/AAAA</string>
    <string name="cadastro_erro_data_msg">Use o formato DD/MM/AAAA</string>
    <string name="cadastro_sucesso">Cadastro realizado com sucesso!</string>
    <string name="cadastro_erro_prefixo">Erro ao cadastrar:</string>
    <string name="cadastro_erro_email_duplicado">email ja cadastrado por favor fazer login</string>

    <!-- CADASTRO - FOTO -->
    <string name="cadastro_hint_foto_camera">Toque na câmera para adicionar foto</string>
    <string name="cadastro_desc_foto">Adicionar foto de perfil</string>
    <string name="cadastro_upload_enviando">Enviando foto...</string>

...
