...
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_ir_para_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_link_cadastro"
...
