<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_scrollview"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/containerBarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="11dp">

        <ImageView
            android:id="@+id/iconVoltar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="13dp"
            android:scaleType="fitXY"
            android:src="@drawable/seta_voltar"
            android:contentDescription="@string/voltar"/>

        <TextView
            android:id="@+id/textVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/consulta_titulo"
            android:textColor="#1A1A1C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/containerBusca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/backgroud_busca"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="6dp">

            <!-- Se o ícone 'lupa' não existir, o Android Studio avisa. Pode usar @android:drawable/ic_menu_search -->
            <ImageView
                android:id="@+id/iconLupa"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/lupa"
                android:contentDescription="@string/consulta_hint_busca"/>

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/consulta_hint_busca"
                android:inputType="text"
                android:textColor="#3DA3FF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsuarios"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_usuario" />

    <LinearLayout
        android:id="@+id/containerBotoesInferiores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:id="@+id/containerSobreNos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_confirm_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/txt_sobreNos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consulta_btn_sobre_nos"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerMeuPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_confirm_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/txt_meuPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consulta_btn_meu_perfil"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerEventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_confirm_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/txt_eventos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consulta_btn_eventos"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
